# Step-counter

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
Data/: acceleration_metadata.csv
cnn/: best_model.pth  data_generator.py  model_step_counter.py  prediction.py  test.py  train_step_counter.py  training.py
first_version/: first_counter.py
src/: clap_detection.ipynb  clap_detection_methods.py  clap_recognition.py  generator.py  main.py  metadata_handler.py  peak_picker.py  save_acc_metadata_sliced.py  video_processing.py
test/: test_data_generator.py  test_full_pipeline.py  test_model.py  test_prediction.py
