# see documentation, e.g.
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://www.python.org/dev/peps/pep-0621/

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # search for packages in the "src" folder
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
authors = [
    { name = "Alina Weidemann", email = "alina.weidemann@study.hs-duesseldorf.de" },
    { name = "Sophie Paul", email = "sophie.paul@study.hs-duesseldorf.de" },
    { name = "Nikita Rosik", email = "nikita.rosik@study.hs-duesseldorf.de" },
    { name = "Meric Kervankiran", email = "meric.kervankiran@study.hs-duesseldorf.de" },
    { name = "Maurice Füsser", email = "maurice.fuesser@study.hs-duesseldorf.de" },
    { name = "Anas Alhariri", email = "anas.alhariri@study.hs-duesseldorf.de" }
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ruff",
    "numpy",
    "pandas",
    "opencv-python",
    "mediapipe",
    "tqdm",
    "scipy",
    "matplotlib",
    "pytest",
    "black",
]

description = "A Python package for step counting using smart watch."
license = {file = "LICENSE"}
name = "step-counter"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "ruff",
]
publishing = [
    "build",
    "twine",
    "wheel",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
)/
'''

[tool.isort]
profile = "black"
known_first_party = "step_counter"
src_paths = ["src", "tests"]
line_length = "100"

[tool.pylint]  # Optional: Pylint configuration
# Pylint configuration options
